--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
         "@types/node": "22.8.6",
         "@types/react": "18.3.12",
         "typescript": "5.6.3"
+    },
+    "dependencies": {
+        "next": "^15.0.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
